--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ main {
 }
 
 .contenedorComidaFondo {
+    display: flex;
     margin-top: 50px;
     width: 100%;
     height: 513px;
@@ -164,7 +165,6 @@ main {
     width: 100%;
     height: 513px;
     left: 0px;
-    top: 200px;
     opacity: 0.3;
 
 }  
@@ -172,10 +172,10 @@ main {
 .imgPrincipal {
 
     position: absolute;
-    width: 50%;
-    height: 470px;
+    width: 640px;
+    height: 360px;
     margin: 20px;
-    left: 780px;
+    left: 50%;
     opacity: 1;
     border-radius: 2px;
 
@@ -294,7 +294,7 @@ footer {
     position: absolute;
     width: 223.91px;
     height: 271.38px;
-    left: 1500px;
+    left: 80%;
     top: 70px;
 }
 
@@ -302,7 +302,7 @@ footer {
     margin: 30px;
     padding: 30px;
     position: absolute;
-    width: 405.71px;
+    width: 30%;
     height: 100px;
     left: 618.47px;
     top: 100px;
