--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 header {
     margin: 0;
-    position: absolute;
+
     width: 100%;
     height: 1000px;
     left: 0px;
@@ -21,11 +21,9 @@ header {
 }
 
 .tituloEncabezado {
-    position: absolute;
     width: 100%;
     height: 199px;
-    top: 400px;
-    
+    margin-top: 10%;
     font-family:'Medula One', cursive;
     font-style: normal;
     font-weight: 400;
@@ -40,11 +38,8 @@ header {
 }
 
 .subtituloEncabezado {
-    position: absolute;
     width: 100%;
-    height: 42.77px;
-    top: 750px;
-    
+    height: 42.77px;    
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
@@ -57,10 +52,8 @@ header {
 }
 
 .parrafoEncabezado {
-    position: absolute;
     width: 100%;
     height: 54px;
-    top: 850px;
     
     font-family: 'Mulish';
     font-style: italic;
@@ -74,16 +67,16 @@ header {
 }
 
 .contenedorNav {
-    position: absolute;
+    display: flex;
     width: 100%;
     height: 74.35px;
-    right: 100px;
     text-align: right;
 }
 
 .menuNav {
     margin: 40px;
     display: inline-block;
+    width: 80%;
 
 }
 
@@ -95,29 +88,24 @@ header {
 }
 
 .imagenCalavera {
-    position: absolute;
+    display: inline-block;
     width: 223.91px;
     height: 271.38px;
-    left: 150px;
-    top: 42.77px;
+    margin: 20px;
 
 }
 
 .imgBanderines {
-    position: absolute;
     width: 100%;
     height: 288.22px;
-    top: 144.62px;
+    margin-top: 50px;
 }
 
 /* INICIO DEL MAIN */
 
 main {
-    position: absolute;
     width: 100%;
-    height: 1708px;
     left: 0px;
-    top: 1000px;
 }
 
 .mainEncabezado {
@@ -126,11 +114,16 @@ main {
     height: 100px;
 }
 
+.lineaEncabezado {
+    width: 60%;
+    border-bottom: solid 4px white ;
+    border-radius: 4px;
+}
+
 .mainEncabezado h2 {
-    position: absolute;
-    width: 450px;
+    width: 400px;
     height: 97px;
-    left: 60px;
+    margin-left: 10%;
 
     font-family: 'Medula One', cursive;
     font-style: normal;
@@ -142,18 +135,8 @@ main {
     color: #FFFFFF;
 }
 
-.mainEncabezado h2::after {
-    content: '';
-    position: absolute;
-    width: 500px;
-    height: 3px;
-    background-color: white;
-    top: 1.1em;
-    right: -90%;
-}
-
 .contenedorComidaFondo {
-    display: flex;
+    position: relative;    
     margin-top: 50px;
     width: 100%;
     height: 513px;
@@ -168,16 +151,15 @@ main {
     left: 0px;
     opacity: 0.3;
 
-}  
+} 
 
-.imgPrincipal {
-
+.imgPrincipal   {
     position: absolute;
     width: 640px;
     height: 360px;
     margin: 20px;
+    margin-top: 5%;
     left: 50%;
-    opacity: 1;
     border-radius: 2px;
 
 }
@@ -199,7 +181,7 @@ main {
 
 .franjaRosa {
     position: absolute;
-    display: inline;
+    display: inline-block;
     width: 62.67px;
     height: 472px;
     left: 0px;
@@ -211,7 +193,7 @@ main {
 
 .franjaRoja {
     position: absolute;
-    display: inline;
+    display: inline-block;
     width: 62.67px;
     height: 472px;
     left: 0px;
@@ -223,7 +205,7 @@ main {
 
 .franjaNaranja {
     position: absolute;
-    display: inline;
+    display: inline-block;
     width: 62.67px;
     height: 472px;
     left: 0px;
@@ -235,7 +217,7 @@ main {
 
 .listaComida {
     position: absolute;
-    display: flex;
+    display: inline-block;
     width: 62.67px;
     height: 472px;
     left: 100px;
@@ -250,23 +232,17 @@ main {
     margin: 40px;
 }
 
+/*  --------------------- Footer ----------------------------- */ 
+
 footer {
-    position: absolute;
+    display: block;
+    margin-top: 20%;
     width: 100%;
     height: 400px;
-    top:3000px;
-}
-
-.footerLinks {
-    position: absolute;
-    width: 100%;
-    height: 200px;
-    top:2000px;
 }
 
 .lineaFooterRosa {
     margin-top: 5px;
-    position: absolute;
     background: #F25EB0;
     width: 100%;
     height: 4px;
@@ -274,8 +250,7 @@ footer {
 }
 
 .lineaFooterNaranja {
-    margin-top: 25px;
-    position: absolute;
+    margin-top: 5px;
     background: #F29829;
     width: 100%;
     height: 4px;
@@ -283,30 +258,31 @@ footer {
 }
 
 .lineaFooterRoja {
-    margin-top: 15px;
-    position: absolute;
+    margin-top: 5px;
     background: #F2421B;
     width: 100%;
     height: 4px;
     border-radius: 100px;
 }
 
+.contenidoFooter {
+    display: flex;
+}
+
+.footerLinks {
+    height: 200px;
+}
+
 .imgCalaveraFooter {
-    position: absolute;
+    margin-top: 40px;
     width: 223.91px;
     height: 271.38px;
-    left: 80%;
-    top: 70px;
 }
 
 .contenedorRedes {
-    margin: 30px;
+    margin: 30px 20%;
     padding: 30px;
-    position: absolute;
-    width: 30%;
     height: 100px;
-    left: 618.47px;
-    top: 100px;
     text-align: center;
 }
 
@@ -318,7 +294,6 @@ footer {
 }
 
 .contenedorNavFooter {
-    position: absolute;
     display: inline-block;
     height: 100px;
     margin: 30px;
@@ -335,68 +310,48 @@ footer {
     font-size: 20px;
 }
 
-/* SECCION NOSOTROS */
+/* -------------------------  SECCION NOSOTROS  -------------------------*/
 
-.seccionMain {
-    position: absolute;
+.contenedorContenido {
+    display: inline-block;
     width: 100%;
-    height: 1708px;
-    left: 0px;
-    top: 700px;
-}
-
-.seccionEncabezado {
-    display: flex;
-    width: 100%;
-    height: 100px;
-}
-
-.seccionEncabezado h2 {
-    position: absolute;
-    width: 450px;
-    height: 97px;
-    left: 60px;
-
-    font-family: 'Medula One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 100px;
-    line-height: 97px;
-    text-transform: uppercase;
-
-    color: #e1db6ef3;
-}
-
-.seccionEncabezado h2::after {
-    content: '';
-    position: absolute;
-    width: 1000px;
-    height: 3px;
-    background-color: white;
-    top: 1.1em;
-    right: -900px;
-}
-
-.pNosotros {
-    margin: 100px;
-    padding: 60px;
-    width: 100%;
-    height: 400px;
-}
-
-.pNosotros p {
+    margin-top: 50px;
+    padding: 70px;
     text-align: center;
-    font-family: 'Medula One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 97px;
 }
 
-.imgCalaveraNos {
-    position: absolute;
-    width: 348px;
-    height: 400px;
-    left: 786px;
-    top: 750px;
+.contenedorContenido p {
+    padding: 80px;
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 60px;
+    text-align: center;
+    
+    color: #FFFFFF;
+}
+
+.contenedorSucursales1 {
+    margin-top: 50px;
+    width: 100%;
+    height: 513px;
+    background-image: url("img/resto_local_primero.jpg");
+}
+
+.contenedorSucursales2 {
+    margin-top: 50px;
+    width: 100%;
+    height: 513px;
+    background-image: url("img/resto_local_segundo.jpg");
+}
+
+.sucursalesH3 {
+    margin-top: 50px;
+    font-family: 'Mulish';
+    font-weight: bolder;
+    font-size: 50px ;
+    line-height: 60px;
+    text-align: center;
+
+    color: #FFFFFF;
 }
