--- a/styles.css
+++ b/styles.css
@@ -123,12 +123,13 @@ main {
 .mainEncabezado h2 {
     width: 400px;
     height: 97px;
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 
     font-family: 'Medula One', cursive;
     font-style: normal;
     font-weight: 400;
-    font-size: 60px;
+    font-size: 80px;
     line-height: 97px;
     text-transform: uppercase;
 
@@ -345,6 +346,12 @@ footer {
     background-image: url("img/resto_local_segundo.jpg");
 }
 
+.encabezadoSucursales {
+    display: flex;
+    width: 100%;
+    margin-top: 50px;
+}
+
 .sucursalesH3 {
     margin-top: 50px;
     font-family: 'Mulish';
@@ -354,4 +361,11 @@ footer {
     text-align: center;
 
     color: #FFFFFF;
+}
+
+.lineaSucursales {
+    width: 10%;
+    margin: 0px 100px;
+    border-bottom: solid 4px white ;
+    border-radius: 4px;
 }
