--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@ header {
     top: 0px;
 }
 
+.textoEncabezado {
+    position: relative;
+}
+
 .tituloEncabezado {
     width: 100%;
     height: 199px;
@@ -38,8 +42,7 @@ header {
 }
 
 .subtituloEncabezado {
-    width: 100%;
-    height: 42.77px;    
+    width: 100%;  
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
@@ -53,8 +56,7 @@ header {
 
 .parrafoEncabezado {
     width: 100%;
-    height: 54px;
-    
+
     font-family: 'Mulish';
     font-style: italic;
     font-weight: 400;
@@ -109,6 +111,7 @@ main {
 }
 
 .mainEncabezado {
+    justify-content: center;
     display: flex;
     width: 100%;
     height: 100px;
@@ -136,8 +139,10 @@ main {
     color: #FFFFFF;
 }
 
+
+
 .contenedorComidaFondo {
-    position: relative;    
+    position: relative;
     margin-top: 50px;
     width: 100%;
     height: 513px;
