--- a/styles.css
+++ b/styles.css
@@ -151,29 +151,17 @@ main {
 
 }
 
-.imgFondo {
-    width: 100%;
-    height: 513px;
-    left: 0px;
-    opacity: 0.3;
-
-} 
-
-.imgPrincipal   {
+.contenidoComida {
     position: absolute;
-    width: 640px;
-    height: 360px;
-    margin: 20px;
-    margin-top: 5%;
-    left: 50%;
-    border-radius: 2px;
-
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    justify-content: space-between;
 }
 
 .contenedorComidaFondo h3 {
-    position: absolute;
-    display: inline;
-    left: 100px;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -185,58 +173,71 @@ main {
     color: #FFFFFF;
 }
 
+.sectorComida {
+    display: flex;
+}
+
+.separadorComida {
+    margin-left: 70px;
+}
+
+
+.listaComida {
+    margin: 20px;
+    margin-left: 50px;
+}
+
+.listaComida ul li {
+    list-style-type: none;
+    font-size: 40px;
+    margin: 40px;
+}
+
+.imgFondo {
+    width: 100%;
+    height: 513px;
+    left: 0px;
+    opacity: 0.3;
+
+} 
+
+.imgPrincipal   {
+    width: 640px;
+    height: 360px;
+    margin: 70px 200px;
+
+}
+
+
 .franjaRosa {
-    position: absolute;
-    display: inline-block;
     width: 62.67px;
     height: 472px;
-    left: 0px;
     margin: 20px;
-    
     background: #F25EB0;
     border-radius: 6px;
 }
 
 .franjaRoja {
-    position: absolute;
-    display: inline-block;
     width: 62.67px;
     height: 472px;
-    left: 0px;
     margin: 20px;
-    
     background: #F2421B;
     border-radius: 6px;
+    
 }
 
 .franjaNaranja {
-    position: absolute;
-    display: inline-block;
     width: 62.67px;
     height: 472px;
-    left: 0px;
     margin: 20px;
-    
     background: #F29829;
     border-radius: 6px;
+    
 }
 
-.listaComida {
-    position: absolute;
-    display: inline-block;
-    width: 62.67px;
-    height: 472px;
-    left: 100px;
-    margin: 20px;
-    margin-top: 100px;
-}
 
-.listaComida ul li {
-    list-style-type: none;
-    width: 500px;
-    font-size: 40px;
-    margin: 40px;
-}
+
+
 
 /*  --------------------- Footer ----------------------------- */ 
 
@@ -319,21 +320,23 @@ footer {
 /* -------------------------  SECCION NOSOTROS  -------------------------*/
 
 .contenedorContenido {
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     margin-top: 50px;
-    padding: 70px;
     text-align: center;
 }
 
+.parrafoNosotros {
+    width: 50%;
+}
+
 .contenedorContenido p {
-    padding: 80px;
     font-family: 'Mulish';
     font-weight: 400;
     font-size: 32px;
     line-height: 60px;
     text-align: center;
-    
     color: #FFFFFF;
 }
 
