--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ header {
     width: 223.91px;
     height: 271.38px;
     margin: 20px;
+    
 }
 
 .imgBanderines {
@@ -209,7 +210,19 @@ main {
     width: 640px;
     height: 360px;
     margin: 70px 200px;
+    transition: 0.4s;
+    border-radius: 10px;
 
+}
+
+.imgPrincipal:hover {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    border-radius: 40px;
+    transition: 0.7s;
 }
 
 
@@ -246,7 +259,6 @@ main {
 /*  --------------------- Footer ----------------------------- */ 
 
 footer {
-    display: block;
     margin-top: 20%;
     width: 100%;
     height: 400px;
@@ -278,6 +290,7 @@ footer {
 
 .contenidoFooter {
     display: flex;
+    justify-content: space-between;
 }
 
 .footerLinks {
@@ -285,16 +298,31 @@ footer {
 }
 
 .imgCalaveraFooter {
-    margin-top: 40px;
+    margin: 40px;
     width: 223.91px;
     height: 271.38px;
 }
 
 .contenedorRedes {
-    margin: 30px 20%;
     padding: 30px;
-    height: 100px;
-    text-align: center;
+    margin-top: 40px;
+}
+
+.contenedorRedes h3 {
+    margin-top: 40px;
+    font-family: 'Mulish';
+    font-size: 25px;
+    color: #FFFFFF;
+}
+
+
+.contenedorRedes ul {
+    margin-top: 40px;
+}
+
+.contenedorRedes li {
+    list-style-type: none;
+    font-size: 20px;
 }
 
 .imgIcon {
@@ -305,7 +333,7 @@ footer {
 }
 
 .contenedorNavFooter {
-    display: inline-block;
+    display: block;
     height: 100px;
     margin: 30px;
     padding: 30px;
@@ -319,15 +347,22 @@ footer {
     font-family: 'Mulish';
     font-style: normal;
     font-size: 20px;
+    transition: 0.3s;
+}
+
+.contenedorNavFooter a:hover {
+    font-size: 30px;
+    transition: 0.3s;
 }
 
 /* -------------------------  SECCION NOSOTROS  -------------------------*/
 
 .contenedorContenido {
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 100px;
     text-align: center;
 }
 
@@ -348,11 +383,21 @@ footer {
     background-image: url("img/resto_local_primero.jpg");
 }
 
+.contenedorSucursales1:hover {
+    transition: 0.5s;
+    filter: grayscale(80%);
+}
+
 .contenedorSucursales2 {
     margin-top: 50px;
     width: 100%;
     height: 513px;
     background-image: url("img/resto_local_segundo.jpg");
+}
+
+.contenedorSucursales2:hover {
+    transition: 0.5s;
+    filter: grayscale(80%);
 }
 
 .encabezadoSucursales {
@@ -376,4 +421,38 @@ footer {
     margin: 0px 100px;
     border-bottom: solid 4px white ;
     border-radius: 4px;
+}
+
+.mangaImagenes{
+    margin-top: 100px;
+    justify-content: space-around;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 300px;
+}
+
+.mangaImagenes div {
+    margin: 40px;
+    width: 400px;
+    height: 400px;
+    border-radius: 90%;
+    transition: 0.7s;
+}
+
+.mangaImagenes div:hover {
+    -webkit-transform:scale(1.3);
+    transform:scale(1.3);
+} 
+
+.img1 {
+    background-image: url("img/tacos_doble.png");
+}
+
+.img2 {
+    background-image: url("img/tabla_de_tacos.jpg");
+}
+
+.img3 {
+    background-image: url("img/tacos_no_menu.jpg");
 }
