--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ main {
 
 .contenedorComidaFondo h3 {
 
-    font-family: 'Montserrat';
+    font-family: 'Mulish';
     font-style: normal;
     font-weight: 700;
     font-size: 75px;
