--- a/styles.css
+++ b/styles.css
@@ -413,6 +413,10 @@ footer {
     width: 50%;
 }
 
+.direccion li {
+    display: flex;
+}
+
 
 .encabezadoSucursales {
     display: flex;
@@ -458,6 +462,30 @@ footer {
     -webkit-transform:scale(1.3);
     transform:scale(1.3);
 } 
+
+.circuloRosa {
+    margin: 0 20px;
+    width: 50px;
+    height: 50px;
+    background: #F25EB0;
+    border-radius: 100%;
+}
+
+.circuloRojo {
+    margin: 0 20px;
+    width: 50px;
+    height: 50px;
+    background: #F2421B;
+    border-radius: 100%;
+}
+
+.circuloNaranja {
+    margin: 0 20px;
+    width: 50px;
+    height: 50px;
+    background: #F29829;
+    border-radius: 100%;
+}
 
 .img1 {
     background-image: url("img/tacos_doble.png");
