corrigo pequeño detalle

--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,8 @@ main {
     color: #FFFFFF;
 }
 
+/* -------------------------  SECCION SUCURSALES  -------------------------*/
+
 .sucursal {
     display: flex;
 }
