--- a/css/header.css
+++ b/css/header.css
@@ -5,15 +5,15 @@ header {
     top: 0px;
 }
 
+
 .textoEncabezado {
     position: relative;
 }
 
 .tituloEncabezado {
-    margin: 10vh 0;
+    margin-bottom: 5%;
     width: 100%;
     height: 23vh;
-    margin-top: 5%;
     font-family:'Medula One', cursive;
     font-style: normal;
     font-weight: 400;
@@ -23,7 +23,6 @@ header {
     
     color: #F0EBDD;
     
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .subtituloEncabezado {
@@ -31,10 +30,9 @@ header {
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
-    font-size: 3em;
     text-align: center;
     text-transform: uppercase;
-    
+    font-size: 5vh;
     color: #FFFFFF;
 }
 
@@ -43,9 +41,9 @@ header {
     font-family: 'Mulish';
     font-style: italic;
     font-weight: 400;
-    font-size: 2em;
     text-align: center;
     text-transform: uppercase;
+    font-size: 5vh;
     
     color: #FFFFFF;
 }
@@ -53,8 +51,12 @@ header {
 .contenedorNav {
     display: flex;
     width: 100%;
-    height: 74.35px;
     text-align: right;
+    justify-content: space-between;
+}
+
+.contenedorNav div {
+    margin: 2em;
 }
 
 .menuNav {
@@ -78,14 +80,10 @@ header {
 }
 
 .imagenCalavera {
-    width: 223.91px;
-    height: 271.38px;
-    margin: 20px;
-    
+    margin: 2em;
+    width: 10%;
 }
 
 .imgBanderines {
     width: 100%;
-    height: 288.22px;
-    margin-top: 50px;
 }
