--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,11 @@ main {
 }
 
 .mainEncabezado {
-    justify-content: center;
+    margin: 5% 0;
+    justify-content: space-around;
     display: flex;
     width: 100%;
-    height: 11vh;
+    height: 15vh;
 }
 
 .lineaEncabezado {
@@ -20,27 +21,24 @@ main {
 
 .mainEncabezado h2 {
     width: 21vw;
-    height: 10vh;
-    margin-left: 5%;
-    margin-right: 5%;
+    height: 9vh;
 
     font-family: 'Medula One', cursive;
     font-style: normal;
     font-weight: 400;
-    font-size: 5em;
+    font-size: 8vh;
     text-transform: uppercase;
 
     color: #FFFFFF;
 }
 
-
+/* ----------------- SECCION MENU ------------------- */
 
 .contenedorComidaFondo {
+    margin-bottom: 5%;
     position: relative;
-    margin-top: 50px;
     width: 100%;
-    height: 513px;
-    top: 200px;
+    height: 54.74vh;
     background: #000000;
 
 }
@@ -51,7 +49,6 @@ main {
     top: 0;
     left: 0;
     right: 0;
-    margin: 0 auto;
     justify-content: space-between;
 }
 
@@ -60,8 +57,7 @@ main {
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 700;
-    font-size: 75px;
-    line-height: 91px;
+    font-size: 10vh;
     text-transform: uppercase;
     
     color: #FFFFFF;
@@ -78,29 +74,27 @@ main {
 
 .listaComida {
     width: 100%;
-    margin: 20px;
-    margin-left: 50px;
+    margin-left: 20%;
 }
 
 .listaComida ul li {
     font-family: 'DM Serif Text', serif;
     list-style-type: none;
-    font-size: 40px;
-    margin: 40px;
+    font-size: 5vh;
+    margin: 8% 0 ;
 }
 
 .imgFondo {
     width: 100%;
-    height: 513px;
-    left: 0px;
+    height: 54.74vh;
     opacity: 0.3;
-
 } 
 
 .imgPrincipal   {
-    width: 640px;
-    height: 360px;
-    margin: 70px 100px;
+    width: 35%;
+    height: 15%;
+    margin-right: 5%;
+    margin-top: 4%;
     transition: 0.4s;
     border-radius: 10px;
 
@@ -117,34 +111,38 @@ main {
 
 
 .franjaRosa {
-    width: 62.67px;
-    height: 472px;
-    margin: 20px;
+    width: 3vw;
+    height: 50vh;
+    margin-top: 5%;
+    margin-left: 2%;
     background: #F25EB0;
     border-radius: 6px;
 }
 
 .franjaCeleste {
-    width: 62.67px;
-    height: 472px;
-    margin: 20px;
+    width: 3vw;
+    height: 50vh;
+    margin-top: 5%;
+    margin-left: 2%;
     background: #4091BE;
     border-radius: 6px;
 }
 
 .franjaRoja {
-    width: 62.67px;
-    height: 472px;
-    margin: 20px;
+    width: 3vw;
+    height: 50vh;
+    margin-top: 5%;
+    margin-left: 2%;
     background: #F2421B;
     border-radius: 6px;
     
 }
 
 .franjaNaranja {
-    width: 62.67px;
-    height: 472px;
-    margin: 20px;
+    width: 3vw;
+    height: 50vh;
+    margin-top: 5%;
+    margin-left: 2%;
     background: #F29829;
     border-radius: 6px;
     
@@ -186,7 +184,7 @@ main {
     margin-top: 50px;
     width: 50%;
     height: 513px;
-    background-image: url("img/resto_local_primero.jpg");
+    background-image: url("../img/resto_local_primero.jpg");
 }
 
 .contenedorSucursales2 {
@@ -196,7 +194,7 @@ main {
     margin-top: 50px;
     width: 50%;
     height: 513px;
-    background-image: url("img/resto_local_segundo.jpg");
+    background-image: url("../img/resto_local_segundo.jpg");
 }
 
 .direccion {
@@ -280,13 +278,13 @@ main {
 }
 
 .img1 {
-    background-image: url("img/tacos_doble.png");
+    background-image: url("../img/tacos_doble.png");
 }
 
 .img2 {
-    background-image: url("img/tabla_de_tacos.jpg");
+    background-image: url("../img/tabla_de_tacos.jpg");
 }
 
 .img3 {
-    background-image: url("img/tacos_no_menu.jpg");
+    background-image: url("../img/tacos_no_menu.jpg");
 }
