--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,8 @@ main {
 } 
 
 .imgPrincipal   {
-    width: 35%;
-    height: 15%;
+    width: 35vw;
+    height: 40vh;
     margin-right: 5%;
     margin-top: 4%;
     transition: 0.4s;
@@ -151,11 +151,11 @@ main {
 /* -------------------------  SECCION NOSOTROS  -------------------------*/
 
 .contenedorContenido {
+    margin: 10% 0;
     position: relative;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-top: 100px;
     text-align: center;
 }
 
@@ -165,10 +165,15 @@ main {
     width: 50%;
     font-family: 'Mulish';
     font-weight: 400;
-    font-size: 32px;
+    font-size: 4vh;
     line-height: 60px;
     text-align: center;
     color: #FFFFFF;
+}
+
+.imgCalaveraNos {
+    margin: 2em;
+    width: 30vw;
 }
 
 /* -------------------------  SECCION SUCURSALES  -------------------------*/
@@ -181,9 +186,9 @@ main {
     position: relative;
     display: flex;
     justify-content: flex-end;
-    margin-top: 50px;
+    margin-top: 5%;
     width: 50%;
-    height: 513px;
+    height: 54.74vh;
     background-image: url("../img/resto_local_primero.jpg");
 }
 
@@ -191,14 +196,14 @@ main {
     position: relative;
     display: flex;
     justify-content: flex-end;
-    margin-top: 50px;
+    margin-top: 5%;
     width: 50%;
-    height: 513px;
+    height: 54.74vh;
     background-image: url("../img/resto_local_segundo.jpg");
 }
 
 .direccion {
-    margin: 50px;
+    margin: 5%;
     width: 50%;
 }
 
@@ -211,80 +216,45 @@ main {
 .encabezadoSucursales {
     display: flex;
     width: 100%;
-    margin-top: 50px;
 }
 
 .sucursalesH3 {
-    margin-top: 50px;
+    margin-top: 5%;
     font-family: 'Mulish';
     font-weight: bolder;
-    font-size: 50px ;
+    font-size: 10vh ;
     line-height: 60px;
     text-align: center;
     color: #FFFFFF;
 }
 
 .lineaSucursales {
-    width: 10%;
     margin: 0px 100px;
     border-bottom: solid 4px white ;
     border-radius: 4px;
 }
 
-.mangaImagenes{
-    margin-top: 100px;
-    justify-content: space-around;
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 300px;
-}
-
-.mangaImagenes div {
-    margin: 40px;
-    width: 400px;
-    height: 400px;
-    border-radius: 90%;
-    transition: 0.7s;
-}
-
-.mangaImagenes div:hover {
-    -webkit-transform:scale(1.3);
-    transform:scale(1.3);
-} 
-
 .circuloRosa {
-    margin: 0 20px;
-    width: 50px;
-    height: 50px;
+    margin: 0 5%;
+    width: 3vw;
+    height: 6vh;
     background: #F25EB0;
     border-radius: 100%;
 }
 
 .circuloRojo {
-    margin: 0 20px;
-    width: 50px;
-    height: 50px;
+    margin: 0 5%;
+    width: 3vw;
+    height: 6vh;
     background: #F2421B;
     border-radius: 100%;
 }
 
 .circuloNaranja {
-    margin: 0 20px;
-    width: 50px;
-    height: 50px;
+    margin: 0 5%;
+    width: 3vw;
+    height: 6vh;
     background: #F29829;
     border-radius: 100%;
 }
 
-.img1 {
-    background-image: url("../img/tacos_doble.png");
-}
-
-.img2 {
-    background-image: url("../img/tabla_de_tacos.jpg");
-}
-
-.img3 {
-    background-image: url("../img/tacos_no_menu.jpg");
-}
