--- a/css/header.css
+++ b/css/header.css
@@ -23,11 +23,14 @@ input {
 }
 
 .nav-menu {
-    margin-right: 70px;
+    text-align: right;
+    margin-right: 50px;
+    width: 50%;
 }
 
+
 .nav-menu li {
-    display: inline-block;
+    display: inline;
     line-height: 100px;
     margin: 0 20px;
     transition: none;
@@ -36,7 +39,7 @@ input {
 .nav-menu li a {
     margin: 5px;
     color: white;
-    font-size: 30px;
+    font-size: 150%;
     text-decoration: none;
 }
 
@@ -94,7 +97,7 @@ input {
 }
 
 
-@media (max-width: 1900px) {  /*cuando el dispositivo es como máximo de 1900px*/
+@media (max-width: 992px) {
     * {
         padding: 0;
         margin: 0;
@@ -121,6 +124,7 @@ input {
     
     .imagenCalavera {
         width: 10%;
+        margin-top: 60px;
         margin-left: 20px;
     }
     
