--- a/css/header.css
+++ b/css/header.css
@@ -25,9 +25,8 @@ input {
 .nav-menu {
     text-align: right;
     margin-right: 50px;
-    width: 50%;
+    width: 100%;
 }
-
 
 .nav-menu li {
     display: inline;
@@ -89,7 +88,7 @@ input {
 
 .imagenCalavera {
     margin: 2em;
-    width: 10%;
+    width: 100px;
 }
 
 .imgBanderines {
@@ -104,13 +103,20 @@ input {
         text-decoration: none;
         list-style: none;
     }
-    
+
     header {
         width: 100%;
         height: 100vh;
     }
+
+    header section {
+        padding-top: 100px;
+    }
     
     nav {
+        background-color: #091026;
+        position: fixed;
+        z-index: 999;
         height: 100px;
         width: 100%;
         display: flex;
@@ -123,8 +129,8 @@ input {
     }
     
     .imagenCalavera {
-        width: 10%;
-        margin-top: 60px;
+        width: 50px;
+        margin-top: 30px;
         margin-left: 20px;
     }
     
@@ -140,6 +146,7 @@ input {
     }
     
     .nav-menu {
+        z-index: 999;
         position: fixed;
         width: 100%;
         height: 0vh;
@@ -176,5 +183,20 @@ input {
     #check:checked ~ .nav-menu li {
         display: block;
     }
+
+    .tituloEncabezado {
+        margin-top: 100px;
+        font-size: 9em;
+    }
+
+    .subtituloEncabezado {
+        font-size: 2em;
+    }
+
+    .parrafoEncabezado {
+        font-size: 1em;
+    }
+
+
 
 }
