--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 
 main {
-    margin-top: 4em;
+    margin-top: 2em;
     width: 100%;
     left: 0px;
 }
@@ -37,6 +37,7 @@ main {
 .contenedorComidaFondo {
     margin-bottom: 5%;
     position: relative;
+    z-index: 1;
     width: 100%;
     height: 54.74vh;
     background: #000000;
@@ -45,6 +46,7 @@ main {
 
 .contenidoComida {
     position: absolute;
+    z-index: 2;
     display: flex;
     top: 0;
     left: 0;
@@ -53,8 +55,8 @@ main {
 }
 
 .contenedorComidaFondo h3 {
-
-    font-family: 'Mulish';
+    text-align: center;
+    font-family:'Medula One', cursive;
     font-style: normal;
     font-weight: 700;
     font-size: 10vh;
@@ -67,21 +69,16 @@ main {
     display: flex;
 }
 
-.separadorComida {
-    margin-left: 70px;
-}
-
 
 .listaComida {
     width: 100%;
-    margin-left: 20%;
 }
 
 .listaComida ul li {
     font-family: 'DM Serif Text', serif;
     list-style-type: none;
     font-size: 5vh;
-    margin: 8% 0 ;
+    margin: 50px 0 ;
 }
 
 .imgFondo {
@@ -113,8 +110,7 @@ main {
 .franjaRosa {
     width: 3vw;
     height: 50vh;
-    margin-top: 5%;
-    margin-left: 2%;
+    margin: 1%;
     background: #F25EB0;
     border-radius: 6px;
 }
@@ -122,8 +118,7 @@ main {
 .franjaCeleste {
     width: 3vw;
     height: 50vh;
-    margin-top: 5%;
-    margin-left: 2%;
+    margin: 1%;
     background: #4091BE;
     border-radius: 6px;
 }
@@ -131,8 +126,7 @@ main {
 .franjaRoja {
     width: 3vw;
     height: 50vh;
-    margin-top: 5%;
-    margin-left: 2%;
+    margin: 1%;
     background: #F2421B;
     border-radius: 6px;
     
@@ -141,8 +135,7 @@ main {
 .franjaNaranja {
     width: 3vw;
     height: 50vh;
-    margin-top: 5%;
-    margin-left: 2%;
+    margin: 1%;
     background: #F29829;
     border-radius: 6px;
     
@@ -153,6 +146,7 @@ main {
 .contenedorContenido {
     margin: 10% 0;
     position: relative;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -256,5 +250,56 @@ main {
     height: 6vh;
     background: #F29829;
     border-radius: 100%;
+}  
+
+@media (max-width: 992px) {
+
+    .imgPrincipal {
+        display: none;
+    }
+
+    .imgFondo {
+        object-fit: cover;
+    }
+
+    .contenidoComida {
+        margin: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contenedorComidaFondo h3 {
+        
+        text-align: center;
+        font-size: 70px;
+        text-transform: uppercase;
+    }
+
+    .separadorComida {
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .listaComida {
+        margin: 0;
+    }
+
+
+    .franjaCeleste {
+        display: none;
+    }
+
+    .franjaNaranja {
+        display: none;
+    }
+
+    .franjaRoja {
+        display: none;
+    }
+
+    .franjaRosa {
+        display: none;
+    }
 }
 
