--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ main {
     font-weight: 700;
     font-size: 10vh;
     text-transform: uppercase;
+    letter-spacing: 9px;
     
     color: #FFFFFF;
 }
