--- a/css/main.css
+++ b/css/main.css
@@ -466,5 +466,28 @@ main {
         width: 100%;
     }
     
+    /* --- SECCION PEDIDO ---  */
+    .grid-item {
+        font-size: 20px;
+    }
+    .btn-pedir {
+        font-family: 'DM Serif Text', serif;
+        background-color: #0a10377a;
+        color: white;
+        font-size: 2em;
+        width: 60%;
+        border-radius: 5px;
+        border: 1px solid white;
+        letter-spacing: 4px;
+        transition: .5s;
+    }
+
+    .btn-pedir:hover {
+        width: 70%;
+    }
+
+    .mainPedido {
+        margin-top: 150px;
+    }
 }
 
