--- a/css/main.css
+++ b/css/main.css
@@ -294,6 +294,16 @@ main {
     font-size: .7em;
 }
 
+.totalPedido {
+    border: 2px solid white;
+    border-radius: 6px;
+    height: 10vh;
+    font-size: 2em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .contador {
     display: flex;
     justify-content: space-between;
