--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,18 @@ main {
     background-color: #F2421B;
 }
 
+.msj-pedido {
+    font-family: 'DM Serif Text', serif;
+    font-size: 2em;
+    background-color: rgba(6, 117, 6, 0.699);
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9px;
 
+}
 
 @media (max-width: 992px) {
 
