--- a/css/header.css
+++ b/css/header.css
@@ -151,7 +151,8 @@ input {
         width: 100%;
         height: 0vh;
         top: 100px;
-        background-color: rgba(0, 0, 0, .95);
+        background-color: #091026;
+        opacity: .95;
         text-align: center;
     }
     
